--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "file-loader": "^6.2.0",
     "typescript": "^5.1.6",
     "webpack": "^5.86.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "clsx": "^2.0.0",
@@ -41,7 +42,6 @@
     "semantic-ui-icon": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "tslib": "^2.6.1",
-    "uuid": "^9.0.0",
-    "webpack-dev-server": "^4.15.1"
+    "uuid": "^9.0.0"
   }
 }
