--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lib/"
   ],
   "scripts": {
-    "build": "npm run build-tsc-dev && npm run build-webpack",
+    "build": "npm run build-tsc && npm run build-webpack",
     "build-dev": "npm run build-tsc-dev && npm run build-webpack-dev",
     "serve-dev": "concurrently -c \"green,blue\" --names \"tsc\" --kill-others \"npm:watch-tsc-dev\" \"npm:build-webpack-serve-dev\"",
 
