--- a/tsconfig.development.json
+++ b/tsconfig.development.json
@@ -11,13 +11,15 @@
         "alwaysStrict": true,
         "noImplicitThis": true,
         "strict": true,
-
-        "noUnusedLocals": true,
-        "esModuleInterop": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
 
         "moduleResolution": "node",
         "inlineSourceMap": true,
         "inlineSources": true,
+
+        "noUnusedLocals": true,
+        "esModuleInterop": true,
 
         "outDir": "lib",
         "rootDir": "src"
