Use custom generic dialog instead of Semantic UI dialog

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "scripts": {
     "build": "npm run build-tsc && npm run build-webpack",
     "build-dev": "npm run build-tsc-dev && npm run build-webpack-dev",
-    "serve-dev": "concurrently -c \"green,blue\" --names \"tsc\" --kill-others \"npm:watch-tsc-dev\" \"npm:build-webpack-serve-dev\"",
+    "serve-dev": "concurrently -c \"green,blue,yellow\" --kill-others \"npm:watch-tsc-dev\" \"npm:build-webpack-serve-dev\" \"npm:watch-extra\"",
     "build-tsc": "tsc --build tsconfig.json",
     "build-tsc-dev": "tsc --build tsconfig.development.json",
     "watch-tsc-dev": "tsc --build tsconfig.development.json --watch --incremental",
+    "watch-extra": "webpack --watch",
     "build-webpack": "webpack --mode production --config ./webpack.config.js",
     "build-webpack-dev": "webpack --mode development --config ./webpack.config.js",
     "build-webpack-serve-dev": "webpack serve --mode development --config ./webpack.config.js"
@@ -26,6 +27,7 @@
     "@typescript-eslint/parser": "^5.37.0",
     "concurrently": "^7.1.0",
     "css-loader": "^6.8.1",
+    "extra-watch-webpack-plugin": "^1.0.3",
     "file-loader": "^6.2.0",
     "less": "^3.1.13",
     "less-loader": "^11.1.3",
