Being adding unit tests and fix isUrl check

--- a/tsconfig.development.json
+++ b/tsconfig.development.json
@@ -17,6 +17,7 @@
         "moduleResolution": "node",
         "inlineSourceMap": true,
         "inlineSources": true,
+        "sourceMap": true,
 
         "noUnusedLocals": true,
         "esModuleInterop": true,
