--- a/package.json
+++ b/package.json
@@ -15,23 +15,27 @@
     "watch-extra": "webpack --watch",
     "build-webpack": "webpack --mode production --config ./webpack.config.js",
     "build-webpack-dev": "webpack --mode development --config ./webpack.config.js",
-    "build-webpack-serve-dev": "webpack serve --mode development --config ./webpack.config.js"
+    "build-webpack-serve-dev": "webpack serve --mode development --config ./webpack.config.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "concurrently": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "concurrently": "^8.2.1",
     "css-loader": "^6.8.1",
     "extra-watch-webpack-plugin": "^1.0.3",
     "file-loader": "^6.2.0",
+    "jest": "^29.7.0",
     "less": "^3.1.13",
     "less-loader": "^11.1.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
