--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "moduleResolution": "node",
         "inlineSourceMap": false,
         "inlineSources": false,
-        "sourceMap": false,
+        "sourceMap": true,
 
         "noUnusedLocals": true,
         "esModuleInterop": true,
