--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "input_form_playground",
-  "version": "1.0.0",
-  "description": "",
+  "name": "input-form-ui",
+  "version": "0.0.1",
+  "description": "Input form UI for the mbdb-app",
   "files": [
+    "dist/",
     "lib/"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Molecular-Biophysics-Database/mbdb-input-ui"
+  },
   "scripts": {
     "build": "npm run build-tsc && npm run build-webpack",
     "build-dev": "npm run build-tsc-dev && npm run build-webpack-dev",
@@ -18,8 +23,13 @@
     "build-webpack-serve-dev": "webpack serve --mode development --config ./webpack.config.js",
     "test": "jest"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "MBDB development group at the Institute of Biotechnology, Czech Acadamy of Sciences <ibt.cas.cz>",
+  "contributors": [
+    "Michal Malý <madcatxster@devoid-pointer.net>",
+    "Emil Dandanell Agerschou <emildandanell.agerschou@ibt.cas.cz>",
+    "Terezie Prchalová <terezie.prchalova1@gmail.com>"
+  ],
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.20",
@@ -43,13 +53,15 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-icon": "^2.5.0",
     "semantic-ui-less": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "tslib": "^2.6.1",
     "uuid": "^9.0.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
