--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Input form UI for the mbdb-app",
   "files": [
+    "assets/",
     "dist/",
     "lib/"
   ],
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "^6.7.0",
     "concurrently": "^8.2.1",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "extra-watch-webpack-plugin": "^1.0.3",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
@@ -53,15 +55,16 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-icon": "^2.5.0",
-    "semantic-ui-less": "^2.5.0",
-    "semantic-ui-react": "^2.1.4",
+    "prop-types": "^15.8.1",
     "tslib": "^2.6.1",
     "uuid": "^9.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-icon": "^2.5.0",
+    "semantic-ui-less": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   }
 }
