--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mbdb/input-form",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Input form UI for the mbdb-app",
   "files": [
     "assets/",
@@ -60,8 +60,8 @@
     "uuid": "^9.0.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.2.0 || ^17.0.2 || ^16.14.0",
+    "react-dom": "^18.2.0 || ^17.0.2 || ^16.14.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-icon": "^2.5.0",
     "semantic-ui-less": "^2.5.0",
