--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react-dom": "^18.2.0 || ^17.0.2 || ^16.14.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-icon": "^2.5.0",
-    "semantic-ui-less": "^2.5.0",
+    "semantic-ui-less": "2.4.1",
     "semantic-ui-react": "^2.1.4"
   }
 }
