--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm run build-tsc && npm run build-webpack",
     "build-dev": "npm run build-tsc-dev && npm run build-webpack-dev",
     "serve-dev": "concurrently -c \"green,blue,yellow\" --kill-others \"npm:watch-tsc-dev\" \"npm:build-webpack-serve-dev\" \"npm:watch-extra\"",
-    "build-tsc": "tsc --build tsconfig.json",
+    "build-tsc": "tsc --build tsconfig.json --verbose",
     "build-tsc-dev": "tsc --build tsconfig.development.json",
     "watch-tsc-dev": "tsc --build tsconfig.development.json --watch --incremental",
     "watch-extra": "webpack --watch",
